[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
csv-async = { version = "1.3.0", features = ["tokio"] }
futures = "0.3.30"
parking_lot = { version = "0.12.1", features = ["serde"]}
rust_decimal = "1.35.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert-str = "0.1.0"
rust_decimal_macros = "1.34.2"
